commit for bug fix and dashboard API changes